workloads/slack-invite-automation/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: slack-invite-automation
  name: slack-invite-automation
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: slack-invite-automation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: slack-invite-automation
    spec:
      containers:
      - env:
        - name: SLACK_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: slack
        - name: COMMUNITY_NAME
          value: Cloud Native Nordics
        - name: SLACK_URL
          value: cloud-native-nordics.slack.com
        image: cloudnativenordics/slack-invite-automation:0.0.1
        imagePullPolicy: IfNotPresent
        name: slack-invite-automation
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
