workloads/slack-invite-automation/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack-invite-automation
  name: slack-invite-automation
  namespace: default
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: slack-invite-automation
