workloads/slack-invite-automation/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: slack-invite-automation
  name: slack-invite-automation
  namespace: default
spec:
  rules:
  - host: invite.cloudnativenordics.com
    http:
      paths:
      - backend:
          serviceName: slack-invite-automation
          servicePort: http
        path: /
  tls:
  - hosts:
    - invite.cloudnativenordics.com
    secretName: slack-invite-automation
